--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "extend": "^3.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "nano": "^6.2.0",
     "serve-favicon": "~2.3.0"
   }
 }
